5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1758_1183.log
== TEST (2019-05-23 11:05:40) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Qunatidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(v[i] < 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:07:14) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Qunatidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:07:51) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Qunatidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
while()
-- ERROR:
File "XXXX", line 10
    while()
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:18:42) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
while(r < Qn):
	if(V[r] >= 0):
		V[r] = x
	r = r + 1
print(V)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:19:54) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(qn)
while(r < Qn):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:00) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(qn)
while(r < Qn):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:22) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(Qn)
while(r < Qn):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:26) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(Qn)
while(r < Qn):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:20:30) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(Qn)
while(r < Qn):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:10) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(Qn)
while(r < n):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:37) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(Qn)
while(r < n):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:21:41) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(Qn)
while(r < n):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:22:09) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[r] = x
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:25:08) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
x = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[r] = V[r]
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:08) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[r] = V[r]
		print(v2[r])
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:28:17) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[r] = V[r]
		print(v2[r])
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:30:13) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
	r = r + 1
	s = s + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:32:47) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[i] >= 0):
		v2[s] = V[r]
	r = r + 1
	s = s + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:33:16) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] < 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
	r = r + 1
	s = s + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:05) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] => 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
	r = r + 1
	s = s + 1
print(v2)
-- ERROR:
File "XXXX", line 7
    if(V[i] => 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:12) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] =>= 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
	r = r + 1
	s = s + 1
print(v2)
-- ERROR:
File "XXXX", line 7
    if(V[i] =>= 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:16) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
	r = r + 1
	s = s + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:35:19) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
	r = r + 1
	s = s + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:39:09) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:39:55) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- EXECUTION TIME:
0.452366
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:39:59) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:40:10) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:40:31) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:42:00) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:42:02) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2, dtype=int)
-- EXECUTION TIME:
0.403156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 20, in <module>
    print(v2, dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:42:02) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:42:03) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:42:04) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2, dtype=int)
-- EXECUTION TIME:
0.462922
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1183/main.py", line 20, in <module>
    print(v2, dtype=int)
TypeError: 'dtype' is an invalid keyword argument for this function

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:42:47) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: "))),dtype=int
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2, dtype=int)
-- ERROR:
File "XXXX", line 2
    V = array(eval(input())),dtype=int
       ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:42:54) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: "))),dtype=int
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
File "XXXX", line 2
    V = array(eval(input())),dtype=int
       ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:43:09) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: "),dtype=int))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:44:14) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn, dtype=int)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:44:39) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn, dtype=int)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:44:40) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
#print(Qn)
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn, dtype=int)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- EXECUTION TIME:
0.481725
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:59:29) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor nigga: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
s = 0

while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:59:44) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor nigga: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
s = 0

while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:59:50) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor nigga: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
s = 0

while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:59:51) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor nigga: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
s = 0

while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 12:00:24) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor nigga: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 12:00:53) 
-- CODE:
from numpy import *
V = array(eval(input("Insira um vetor nigga: ")))
# Quantidade de elementos negativos:
i = 0
Qn = 0
while(i < size(V)):
	if(V[i] >= 0):
		Qn = Qn + 1
	i = i + 1
# Vetor sem os elementos negativos:
r = 0
s = 0
v2 = zeros(Qn,dtype=int)
while(r < size(V)):
	if(V[r] >= 0):
		v2[s] = V[r]
		s = s + 1
	r = r + 1
print(v2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
